<resources>
    <string name="app_name">SoundboardXXX</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="objects">Objects</string>
    <string name="sound_recorder">Sound Recorder</string>
    <string name="animals">Animals</string>
    <string name="electro">Electro</string>
    <string name="basic">Basic</string>
    <string name="basic">Basic</string>
    <string name="electro">Electro</string>
    <string name="animals">Animals</string>
    <string name="objects">Objects</string>
    <string name="sound_recorder">Sound Recorder</string>
    <string name="basic">Basic</string>
    <string name="electro">Electro</string>
    <string name="animals">Animals</string>
    <string name="objects">Objects</string>
    <string name="sound_recorder">Sound Recorder</string>
    <string name="basic">Basic</string>
    <string name="electro">Electro</string>
    <string name="animals">Animals</string>
    <string name="objects">Objects</string>
    <string name="sound_recorder">Sound Recorder</string>
    <string name="basic">Basic</string>
    <string name="electro">Electro</string>
    <string name="animals">Animals</string>
    <string name="objects">Objects</string>
    <string name="sound_recorder">Sound Recorder</string>
    <string name="button">Button</string>
    <string name="start_recording">Start Recording</string>
    <string name="save">Save</string>
    <string name="repeat">Repeat</string>
    <string name="delete">Delete</string>
    <string name="custom_sounds">Custom Sounds</string>
</resources>