<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnRecord"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivitySoundRec">

    <LinearLayout
        android:id="@+id/TabLayout"
        android:layout_width="412dp"
        android:layout_height="46dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="684dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnBasic"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="64dp"
            android:layout_height="45dp"
            android:layout_marginBottom="1dp"
            android:background="#020202"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/basic"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FF9800"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/BtnElectro"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="86dp"
            android:layout_height="44dp"
            android:layout_marginBottom="2dp"
            android:background="#020202"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/electro"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFEB3B"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnBasic"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnAnimals"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_marginBottom="1dp"
            android:background="#020202"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/animals"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#4CAF50"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/BtnElectro"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnObjects"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="80dp"
            android:layout_height="44dp"
            android:layout_marginBottom="2dp"
            android:background="#020202"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/objects"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#5DA0D6"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnAnimals"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSoundRec"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="103dp"
            android:layout_height="41dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/sound_recorder"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FBFBFB"
            android:textSize="12sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.DeviceDefault.Button"
        android:layout_width="138dp"
        android:layout_height="53dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="133dp"
        android:layout_marginBottom="557dp"
        android:background="#000000"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/start_recording"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#D11002"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TabLayout" />

    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="169dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="467dp"
        android:background="#0B0A0A"
        android:fontFamily="sans-serif-medium"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TabLayout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="39dp"
        android:layout_marginBottom="467dp"
        android:background="#0B0A0A"
        android:fontFamily="sans-serif-medium"
        android:text="@string/repeat"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button4"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="169dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="467dp"
        android:background="#0B0A0A"
        android:fontFamily="sans-serif-medium"
        android:text="@string/delete"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/TabLayout" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="152dp"
        android:layout_height="28dp"
        android:fontFamily="sans-serif-black"
        android:lineSpacingExtra="8sp"
        android:text="@string/custom_sounds"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.469" />

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="372dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ScrollView
            style="@android:style/Widget.Holo.Light.ScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#1EE46D6D"
            android:backgroundTint="#F10D0D"
            android:clickable="true"
            android:scrollbarStyle="insideOverlay">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>