<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarSize="6dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="24dp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/btn21"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/TabLayout"
        android:layout_width="412dp"
        android:layout_height="46dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="684dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnBasic"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="64dp"
            android:layout_height="45dp"
            android:layout_marginBottom="1dp"
            android:background="@color/cardview_shadow_end_color"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/basic"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FF9800"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/BtnElectro"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="86dp"
            android:layout_height="44dp"
            android:layout_marginBottom="2dp"
            android:background="@color/black"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/electro"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFEB3B"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnBasic"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnAnimals"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:layout_marginBottom="1dp"
            android:background="#000000"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/animals"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#4CAF50"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/BtnElectro"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnObjects"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="80dp"
            android:layout_height="44dp"
            android:layout_marginBottom="2dp"
            android:background="#000000"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/objects"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#5DA0D6"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnAnimals"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnSoundRec"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="103dp"
            android:layout_height="match_parent"
            android:background="#000000"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/sound_recorder"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="21dp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/btn12"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="37dp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/btn6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TabLayout" />

    <Button
        android:id="@+id/btn13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="24dp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/btn16"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="20dp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/btn15"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="24dp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/btn11"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintStart_toEndOf="@+id/btn7" />

    <Button
        android:id="@+id/btn14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="24dp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/btn17"
        app:layout_constraintEnd_toStartOf="@+id/btn15"
        app:layout_constraintStart_toEndOf="@+id/btn13" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="32dp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/btn5"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toBottomOf="@+id/TabLayout" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="24dp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/btn9"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="24dp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/btn10"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="26dp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/btn7"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="26dp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/btn8"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintStart_toEndOf="@+id/btn4" />

    <Button
        android:id="@+id/btn15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="23dp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/btn18"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/btn14"
        app:layout_constraintEnd_toStartOf="@+id/btn12"
        app:layout_constraintStart_toEndOf="@+id/btn10" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="32dp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/btn4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TabLayout" />

    <Button
        android:id="@+id/btn10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/btn13"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="24dp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/btn19"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="24dp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/btn20"
        app:layout_constraintEnd_toStartOf="@+id/btn18"
        app:layout_constraintStart_toEndOf="@+id/btn16" />

    <Button
        android:id="@+id/btn19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="22dp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/btn22"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="21dp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/btn23"
        app:layout_constraintEnd_toStartOf="@+id/btn21"
        app:layout_constraintStart_toEndOf="@+id/btn19" />

    <Button
        android:id="@+id/btn21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="22dp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/btn24"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="64dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="65dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn24"
        app:layout_constraintStart_toEndOf="@+id/btn22" />

    <Button
        android:id="@+id/btn24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="64dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
